--- a/index.html
+++ b/index.html
@@ -20,69 +20,76 @@
         <label for="blue" class="visually-hidden">Blue theme</label>
         <input type="radio" id="blue" name="theme" />
 
-        <label for="green" class="visually-hidden">Green theme</label>
-        <input type="radio" id="green" name="theme" />
+        <!-- <label for="green" class="visually-hidden">Green theme</label>
+        <input type="radio" id="green" name="theme" /> -->
 
         <label for="dark" class="visually-hidden">Dark theme</label>
         <input type="radio" id="dark" name="theme" />
 
-        <label for="test" class="visually-hidden">Test theme</label>
-        <input type="radio" id="test" name="theme" />
+        <!-- <label for="test" class="visually-hidden">Test theme</label>
+        <input type="radio" id="test" name="theme" /> -->
       </fieldset>
     </form>
 
     <main>
       <div class="wrapper">
-        <h1>Color themes the easy way</h1>
+        <h1>Yarn Help!</h1>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-          natus error quam suscipit architecto enim nobis vero eaque.
-          Repudiandae quisquam impedit fugiat neque delectus doloremque!
+          Welcome to YarnHelp! This is a site for knitters and crocheters of all
+          levels who want yarn math help, as well as their friends and family
+          that just want to know "how much yarn" to give them as a gift.
         </p>
         <p>
-          Rem neque inventore necessitatibus totam incidunt eius reprehenderit
-          quis ipsam officia praesentium, quod vero soluta maxime iure nobis
-          dolorum a quibusdam officiis ratione debitis? Ipsam.
+          It's also the home for Crafting and Code Coffee Chats Right now (May,
+          2023) the focus is on that page. Later on, you'll find yarn math help
+          and tools for: Calculating gauge How many stitches to cast on for
+          sweaters, socks, hats, and other projects Weight equivlents for
+          holding yarn double Needle and hook size convertors French language
+          versions of some of the pages
         </p>
-        <h2>Something interesting</h2>
+
+        <h2>Pages</h2>
         <div class="auto-grid">
           <div class="card">
-            <h3 class="card__title">A medium-length title</h3>
+            <h3 class="card__title">
+              <a href="/howmuchyarn.html">How Much Yarn?</a>
+            </h3>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Repellendus, atque.
+              Voluptatem excepturi tempore quo recusandae sunt ullam earum optio
+              cum?
+              <a href="/doctorwho.html">a link</a>
             </p>
           </div>
           <div class="card">
-            <h3 class="card__title">A short title</h3>
+            <h3 class="card__title">Crafting and Code Coffee Chats</h3>
             <p>
               Voluptatem excepturi tempore quo recusandae sunt ullam earum optio
               cum?
             </p>
           </div>
           <div class="card">
-            <h3 class="card__title">A medium-length title</h3>
+            <h3 class="card__title">Doctor Who Scarf</h3>
             <p>
               Nam laudantium voluptas, tenetur repellendus numquam rem incidunt
               deleniti veritatis?
             </p>
           </div>
           <div class="card">
-            <h3 class="card__title">A much longer title than the others</h3>
+            <h3 class="card__title">About</h3>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Repellendus, atque.
             </p>
           </div>
           <div class="card">
-            <h3 class="card__title">A medium-legth title</h3>
+            <h3 class="card__title">Contact</h3>
             <p>
               Voluptatem excepturi tempore quo recusandae sunt ullam earum optio
               cum?
             </p>
           </div>
           <div class="card">
-            <h3 class="card__title">A short title</h3>
+            <h3 class="card__title">Developer Information</h3>
             <p>
               Nam laudantium voluptas, tenetur repellendus numquam rem incidunt
               deleniti veritatis?
