add build in public message and links to index.html

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <main>
       <div class="wrapper">
         <h1>Yarn Help!</h1>
+        <h2>3.0 Version - Is Being Built in Public</h2>
+        <p>This updated design and "DRYer" Javascript code is being built in public. Every day that I work on it, the updates will be deployed live. For the functional version please visit <a href="https://yarnhelp.app">https://yarnhelp.app</a> Note that I tend to use really bright colours like red and green for css testing purposes. Take a look at the code here: <a href="https://github.com/GingerKiwi/yarnhelp3">GitHub repo for Yarn Help 3.0</a></p>
         <p>
           Welcome to YarnHelp! This is a site for knitters and crocheters of all
           levels who want yarn math help, as well as their friends and family
@@ -41,11 +43,18 @@
         </p>
         <p>
           It's also the home for Crafting and Code Coffee Chats Right now (May,
-          2023) the focus is on that page. Later on, you'll find yarn math help
-          and tools for: Calculating gauge How many stitches to cast on for
-          sweaters, socks, hats, and other projects Weight equivlents for
-          holding yarn double Needle and hook size convertors French language
-          versions of some of the pages
+          2023) the focus is on building out <a href="/howmuchyarn.html">How Much Yarn</a>  and the Crafting and Code Coffee Chats. Later on, you'll find yarn math help
+          and tools for: 
+          <ul>
+            <li>Calculating gauge</li>
+            <li>How many stitches to cast on for
+                sweaters, socks, hats, and other projects</li>
+                <li> Weight equivlents for
+                    holding yarn double</li>
+                    <li>Needle and hook size convertors</li>
+                    <li>French language
+                        versions of some of the pages</li>
+          </ul>    
         </p>
 
         <h2>Pages</h2>
