add content to craftingandcode.html. add hero section with placeholder text to index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Yarn Help!</title>
   </head>
-  <body>
+  <header>
     <form class="color-picker" action="">
       <fieldset>
         <legend class="visually-hidden">Pick a color scheme</legend>
@@ -31,6 +31,9 @@
       </fieldset>
     </form>
 
+    <div class="hero">Hero with image and site title is going here</div>
+</header>
+<body>
     <main>
       <div class="wrapper">
         <h1>Yarn Help!</h1>
@@ -70,7 +73,7 @@
             </p>
           </div>
           <div class="card">
-            <h3 class="card__title">Crafting and Code Coffee Chats</h3>
+            <h3 class="card__title"> <a href="/craftingandcode.html">Crafting and Code Coffee Chats</a> </h3>
             <p>
               Voluptatem excepturi tempore quo recusandae sunt ullam earum optio
               cum?
