fix code style for ul in craftingandcode.html

--- a/craftingandcode.html
+++ b/craftingandcode.html
@@ -101,18 +101,11 @@
             <h3 class="card__title">Dates</h3>
             <p>
               <ul>
-                <li>
-                   Sunday May 28th
-                    </li>
-                    <li>Sunday, June 11th
-                        </li>
-                        <li>Sunday, June 25th
-                            </li>
-                            <li>
-                                Sunday, July 9th
-                           
-                            </li>
-                            <li>Sunday, July 23rd</li>
+                <li>Sunday May 28th</li>
+                <li>Sunday, June 11th</li>
+                <li>Sunday, June 25th</li>
+                <li>Sunday, July 9th</li>
+                <li>Sunday, July 23rd</li>
               </ul>
             </p>
           </div>
