comment out all radios except worsted and fingering in howmuchyarn.html

--- a/howmuchyarn.html
+++ b/howmuchyarn.html
@@ -54,32 +54,36 @@
           thickness yarn.
         </p>
 
-        <form action="" class="how-much-yarn">
+        <form action="#" class="how-much-yarn">
             
         <div class="form-section">
           <fieldset>
             <legend>Choose a Yarn Weight (thickness)</legend>
             <div>
-              <div>
+              <!-- <div>
                 <input type="radio" name="weight" id="lace-01" checked />
                 <label for="lace-01" class="">01 Lace</label>
-              </div>
-              <input type="radio" name="weight" id="fingering-02" checked />
-              <label for="fingering-02" class="">02 Fingering</label>
+              </div> -->
               <div>
+                <input type="radio" name="weight" id="fingering-02" checked />
+                <label for="fingering-02" class="">02 Fingering</label>
+              </div>
+              <!-- <div>
                 <input type="radio" name="weight" id="sport-03" checked />
                 <label for="sport-03" class="">03 Sport</label>
-              </div>
-              <input type="radio" name="weight" id="dk-04" checked />
-              <label for="dk-04" class="">04 DK</label>
-              <div>
+              </div> -->
+              <!-- <div>
+                <input type="radio" name="weight" id="dk-04" checked />
+                <label for="dk-04" class="">04 DK</label>
+              </div> -->
+                <div>
                 <input type="radio" name="weight" id="worsted-05" checked />
                 <label for="worsted-05" class="">05 Worsted</label>
               </div>
-              <div>
+              <!-- <div>
                 <input type="radio" name="weight" id="chunky-06" checked />
                 <label for="chunky-06" class="">06 Chunky</label>
-              </div>
+              </div> -->
             </div>
         </div>
         <div class="form-section">
