--- a/howmuchyarn.html
+++ b/howmuchyarn.html
@@ -102,18 +102,20 @@
         <h2>Project Types</h2>
         <div class="auto-grid">
           <div class="card">
-            <h3 class="card__title">Sweaters/Jumpers</h3>
-            <p>
-              Voluptatem excepturi tempore quo recusandae sunt ullam earum optio
-              cum?
-            </p>
+            <h3 class="card__title">Sweaters/<wbr/>Jumpers</h3>
+            <p>You will need <span class="babyPullover">__</span> balls of yarn for a baby pullover sweater.</p>
           </div>
           <div class="card">
             <h3 class="card__title">Scarfs</h3>
-            <p>
-              Voluptatem excepturi tempore quo recusandae sunt ullam earum optio
-              cum?
-            </p>
+            <p>You will need <span class="childScarf">__</span> balls of yarn for a child's scarf.</p>
+
+            <p>You will need <span class="adultSmallScarf">__</span> balls of yarn for a adult's small scarf.</p>
+
+            <p>You will need <span class="adultLargeScarf">__</span> balls of yarn for a adult's large scarf.</p>
+
+            <p>You will need <span class="adultExtraLongScarf">__</span> balls of yarn for a adult's extra large scarf.</p>
+
+            <p>You will need <span class="doctorWhoScarf">__</span> balls of yarn for a Doctor Who scarf.</p>
           </div>
           <div class="card">
             <h3 class="card__title">Blankets and Throws</h3>
