feat: add code to calculate how much yarn is needed

--- a/howmuchyarn.html
+++ b/howmuchyarn.html
@@ -145,5 +145,6 @@
       </div>
     </main>
     <script src="/app.js"></script>
+    <script src="/howmuchyarn.js" type="module"></script>
   </body>
 </html>
