add message to user re app is in dev. comment out all yarn weight radios except fingerin01 and worsted04 in howmuchyarn.html

--- a/howmuchyarn.html
+++ b/howmuchyarn.html
@@ -53,6 +53,7 @@
           edition is just for pullover sweaters/jumpers made with medium
           thickness yarn.
         </p>
+        <p>Note: This version is in active development. Not all data or functionalities have been added. Please visit: <a href="https://yarnhelp.app/howmuchyarn">https://yarnhelp.app/howmuchyarn</a> for a version for worsted weight (Craft Yarn Council 04 weight) that works for all projects.</p>
 
         <form action="#" class="how-much-yarn">
 
@@ -60,30 +61,30 @@
           <fieldset>
             <legend>Choose a Yarn Weight (thickness)</legend>
             <div>
-              <div>
+              <!-- <div>
                 <input type="radio" name="weight" id="lace-01" value="lace01" />
                 <label for="lace-01" class="">01 Lace</label>
-              </div>
+              </div> -->
               <div>
                 <input type="radio" name="weight" id="fingering-02" checked value="fingering01"/>
                 <label for="fingering-02" class="">02 Fingering</label>
               </div>
-              <div>
+              <!-- <div>
                 <input type="radio" name="weight" id="sport-03" value="sport03" />
                 <label for="sport-03" class="">03 Sport</label>
-              </div>
-              <div>
+              </div> -->
+              <!-- <div>
                 <input type="radio" name="weight" id="dk-04" value="dk04" />
                 <label for="dk-04" class="">04 DK</label>
-              </div>
+              </div> -->
                 <div>
                 <input type="radio" name="weight" id="worsted-05" value="worsted04"/>
                 <label for="worsted-05" class="">05 Worsted</label>
               </div>
-              <div>
+              <!-- <div>
                 <input type="radio" name="weight" id="chunky-06" value="chunky06"/>
                 <label for="chunky-06" class="">06 Chunky</label>
-              </div>
+              </div> -->
             </div>
         </div>
         <div class="form-section">
