organize css with comment headings, add utility classes for typography, add link to 2.0 version to howmuchyarn.html

--- a/howmuchyarn.html
+++ b/howmuchyarn.html
@@ -53,7 +53,7 @@
           edition is just for pullover sweaters/jumpers made with medium
           thickness yarn.
         </p>
-        <p>Note: This version is in active development. Not all data or functionalities have been added. Please visit: <a href="https://yarnhelp.app/howmuchyarn">https://yarnhelp.app/howmuchyarn</a> for a version for worsted weight (Craft Yarn Council 04 weight) that works for all projects.</p>
+        <p class="emphasis--fw-600">Note: This version is in active development. Not all data or functionalities have been added. Please visit: <a href="https://yarnhelp.app/howmuchyarn">https://yarnhelp.app/howmuchyarn</a> for a version for worsted weight (Craft Yarn Council 04 weight) that works for all projects.</p>
 
         <form action="#" class="how-much-yarn">
 
@@ -87,7 +87,7 @@
               </div> -->
             </div>
         </div>
-        <div class="form-section">
+        <div class="form-section padding--top-2">
             <label for="input"
               >Yards in Each Ball:
               <input type="number" placeholder="100" name="yardsPerBall" id="yards-per-ball" min="10" max="120000" step="1" value="10" />
@@ -105,6 +105,7 @@
           <div class="card">
             <h3 class="card__title">Sweaters/<wbr/>Jumpers</h3>
             <p>You will need <span class="babyPullover">__</span> balls of yarn for a baby pullover sweater.</p>
+            <p>More sizes coming soon!</p>
           </div>
           <div class="card">
             <h3 class="card__title">Scarfs</h3>
@@ -121,22 +122,18 @@
           <div class="card">
             <h3 class="card__title">Blankets and Throws</h3>
             <p>
-              Nam laudantium voluptas, tenetur repellendus numquam rem incidunt
-              deleniti veritatis?
+              Coming soon!
             </p>
           </div>
           <div class="card">
             <h3 class="card__title">Accessories</h3>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Repellendus, atque.
+              Coming soon!
             </p>
           </div>
         </div>
         <p>
-          Rerum, neque! Consequuntur obcaecati beatae dolorum, fuga itaque iusto
-          dicta et corporis facere ea necessitatibus odit cum, voluptates harum,
-          dolore maiores aliquid distinctio repellendus nesciunt!
+          Return to: <a href="/index.html">home page</a>
         </p>
         <p>
           Unde dolor quod delectus obcaecati labore laboriosam optio sit
