add elegant theme inspired by:https://github.com/aylinmarie/elegant-knit

--- a/howmuchyarn.html
+++ b/howmuchyarn.html
@@ -26,6 +26,9 @@
         <label for="dark" class="visually-hidden">Dark theme</label>
         <input type="radio" id="dark" name="theme" />
 
+        <label for="elegant" class="visually-hidden">Elegant theme</label>
+        <input type="radio" id="elegant" name="theme" />
+
         <!-- <label for="test" class="visually-hidden">Test theme</label>
         <input type="radio" id="test" name="theme" /> -->
       </fieldset>
