delete commented out theme radio buttons in index.html and howmuchyarn.html. wrap radios in <header> inc hero section goes here on both pgs

--- a/index.html
+++ b/index.html
@@ -20,19 +20,17 @@
         <label for="blue" class="visually-hidden">Blue theme</label>
         <input type="radio" id="blue" name="theme" />
 
-        <!-- <label for="green" class="visually-hidden">Green theme</label>
-        <input type="radio" id="green" name="theme" /> -->
-
         <label for="dark" class="visually-hidden">Dark theme</label>
         <input type="radio" id="dark" name="theme" />
 
-        <!-- <label for="test" class="visually-hidden">Test theme</label>
-        <input type="radio" id="test" name="theme" /> -->
+        <label for="elegant" class="visually-hidden">Elegant theme</label>
+        <input type="radio" id="elegant" name="theme" />
+
       </fieldset>
     </form>
 
     <div class="hero">Hero with image and site title is going here</div>
-</header>
+  </header>
 <body>
     <main>
       <div class="wrapper">
