add link to /ravely/index.html to ./index.html in developer info card

--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
           <div class="card">
             <h3 class="card__title">Developer Information</h3>
             <p>
-              Nam laudantium voluptas, tenetur repellendus numquam rem incidunt
-              deleniti veritatis?
+              Link to page where first basic ravelry api request is implemented. <br><a href="./ravelry/index.html">Yarn info from Ravelry API</a>
             </p>
           </div>
         </div>
