start setting up elegant02 (Typewolf.com inspired) theme. Also better organize :root colours.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <label for="elegant" class="visually-hidden">Elegant theme</label>
         <input type="radio" id="elegant" name="theme" />
 
+        <label for="elegant02" class="visually-hidden">Elegant Wolf (Elegant02) theme</label>
+        <input type="radio" id="elegant02" name="theme" />
+
       </fieldset>
     </form>
 
