more theme work. organized radio buttons on index.html. started on :root:has(#theme:checked) using var

--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
   <header>
     <form class="color-picker" action="">
       <fieldset>
+        
         <legend class="visually-hidden">Pick a color scheme</legend>
-        <label for="light" class="visually-hidden">Light</label>
-        <input type="radio" name="theme" id="light" checked />
+        <label for="light" class="visually-hidden">Greyscale</label>
+        <input type="radio" name="theme" id="greyscale" checked />
 
-        <label for="pink" class="visually-hidden">Pink theme</label>
+        <label for="pink01" class="visually-hidden">Pink 01 theme</label>
+        <input type="radio" id="pink01" name="theme" />
+
+        <label for="neapolitan" class="visually-hidden">Neapolitan Icecream Theme theme</label>
+        <input type="radio" id="neapolitan" name="theme" />
+
+        <label for="pink02" class="visually-hidden">Pink 02 theme</label>
         <input type="radio" id="pink" name="theme" />
-
-        <label for="blue" class="visually-hidden">Blue theme</label>
-        <input type="radio" id="blue" name="theme" />
 
         <label for="dark" class="visually-hidden">Dark theme</label>
         <input type="radio" id="dark" name="theme" />
