add <p> for all sizes of pullovers

--- a/howmuchyarn.html
+++ b/howmuchyarn.html
@@ -104,8 +104,13 @@
           <div class="card">
             <h3 class="card__title">Sweaters/<wbr/>Jumpers</h3>
             <p>You will need <span class="babyPullover">__</span> balls of yarn for a baby pullover sweater.</p>
-            <p>More sizes coming soon!</p>
+            <p>You will need <span class="toddlerPullover">__</span> balls of yarn for a toddler pullover sweater.</p>
+            <p>You will need <span class="childPullover">__</span> balls of yarn for a child pullover sweater.</p>
+            <p>You will need <span class="adultSmallPullover">__</span> balls of yarn for an adult small to medium pullover sweater.</p>
+            <p>You will need <span class="adultLargePullover">__</span> balls of yarn for an adult medium to large pullover sweater.</p>
+            <p>You will need <span class="adultXxlPullover">__</span> balls of yarn for a adult XL to XXL pullover sweater.</p>
           </div>
+          
           <div class="card">
             <h3 class="card__title">Scarfs</h3>
             <p>You will need <span class="childScarf">__</span> balls of yarn for a child's scarf.</p>
