uncomment out div radio buttons for sport-03 and dk-04 in howmuchyarn.html

--- a/howmuchyarn.html
+++ b/howmuchyarn.html
@@ -68,14 +68,14 @@
                 <input type="radio" name="weight" id="fingering-02" checked value="fingering01"/>
                 <label for="fingering-02" class="">02 Fingering</label>
               </div>
-              <!-- <div>
+              <div>
                 <input type="radio" name="weight" id="sport-03" value="sport03" />
                 <label for="sport-03" class="">03 Sport</label>
-              </div> -->
-              <!-- <div>
+              </div>
+              <div>
                 <input type="radio" name="weight" id="dk-04" value="dk04" />
                 <label for="dk-04" class="">04 DK</label>
-              </div> -->
+              </div>
                 <div>
                 <input type="radio" name="weight" id="worsted-05" value="worsted04"/>
                 <label for="worsted-05" class="">05 Worsted</label>
