--- a/howmuchyarn.html
+++ b/howmuchyarn.html
@@ -80,10 +80,10 @@
                 <input type="radio" name="weight" id="worsted-04" value="worsted04"/>
                 <label for="worsted-04" class="">04 Worsted</label>
               </div>
-              <!-- <div>
-                <input type="radio" name="weight" id="chunky-06" value="chunky06"/>
-                <label for="chunky-06" class="">06 Chunky</label>
-              </div> -->
+              <div>
+                <input type="radio" name="weight" id="bulky-06" value="bulky06"/>
+                <label for="bulky-06" class="">06 Bulky</label>
+              </div>
             </div>
         </div>
         <div class="form-section padding--top-2">
