add radio button for superBulky06 and fix typo in bulky in howmuchyarn.html

--- a/howmuchyarn.html
+++ b/howmuchyarn.html
@@ -81,8 +81,12 @@
                 <label for="worsted-04" class="">04 Worsted</label>
               </div>
               <div>
-                <input type="radio" name="weight" id="bulky-06" value="bulky06"/>
-                <label for="bulky-06" class="">06 Bulky</label>
+                <input type="radio" name="weight" id="bulky-05" value="bulky05"/>
+                <label for="bulky-05" class="">05 Bulky</label>
+              </div>
+              <div>
+                <input type="radio" name="weight" id="superBulky-06" value="superBulky06"/>
+                <label for="superBulky-06" class="">06 Super Bulky</label>
               </div>
             </div>
         </div>
