--- a/howmuchyarn.html
+++ b/howmuchyarn.html
@@ -117,7 +117,7 @@
           </div>
 
           <div class="card">
-            <h3 class="card__title">Crochted Sweaters/<wbr/>Jumpers</h3>
+            <h3 class="card__title">Crocheted Sweaters/<wbr/>Jumpers</h3>
               <p>You will need <span class="babyPulloverCrochet">__</span> balls of yarn for a baby pullover crochet sweater.</p>
               <p>You will need <span class="toddlerPulloverCrochet">__</span> balls of yarn for a toddler pullover crochet sweater.</p>
               <p>You will need <span class="childPulloverCrochet">__</span> balls of yarn for a child pullover crochet sweater.</p>
@@ -147,7 +147,6 @@
 
               <p>You will need <span class="doctorWhoScarfCrochet">__</span> balls of yarn for a Doctor Who scarf.</p>
           </div>
-          <div class="card">
 
           <div class="card">
             <h3 class="card__title">Blankets and Throws</h3>
@@ -155,12 +154,14 @@
               Coming soon!
             </p>
           </div>
+
           <div class="card">
             <h3 class="card__title">Accessories</h3>
             <p>
               Coming soon!
             </p>
           </div>
+
         </div>
         <p>
           Return to: <a href="/index.html">home page</a>
