finish basic code to deploy to yarnhelp.app for Refactor DX 2023

--- a/craftingandcode.html
+++ b/craftingandcode.html
@@ -8,6 +8,9 @@
     <title>Yarn Help!</title>
   </head>
   <body>
+    <header>
+
+   
     <form class="color-picker" action="">
       <fieldset>
         <legend class="visually-hidden">Pick a color scheme</legend>
@@ -31,10 +34,14 @@
       </fieldset>
     </form>
 
+    <!-- ADD SKIP TO MAIN CONTENT! -->
+    <nav><a href="/index.html">HOME</a></nav>
+    <div class="hero">Hero with image and site title is going here.</div>
+  </header>
     <main>
       <div class="wrapper">
         <h1>Crafting and Code Coffee Chats</h1>
-        <h2>3.0 Version - Is Being Built in Public</h2>
+        <!-- <h2>3.0 Version - Is Being Built in Public</h2>
         <p>This updated design and "DRYer" Javascript code is being built in public. Every day that I work on it, the updates will be deployed live. For the functional version please visit <a href="https://yarnhelp.app">https://yarnhelp.app</a> Note that I tend to use really bright colours like red and green for css testing purposes. Take a look at the code here: <a href="https://github.com/GingerKiwi/yarnhelp3">GitHub repo for Yarn Help 3.0</a></p>
         <p>
           Welcome to YarnHelp! This is a site for knitters and crocheters of all
@@ -55,9 +62,9 @@
                     <li>French language
                         versions of some of the pages</li>
           </ul>    
-        </p>
+        </p> -->
 
-        <h2>About</h2>
+        <!-- <h2>About</h2> -->
         <div class="auto-grid">
           <div class="card">
             <h3 class="card__title">
@@ -77,7 +84,7 @@
           <div class="card">
             <h3 class="card__title">What types of crafts count? Is it only knitting and crochet? </h3>
             <p>
-                (Any kind of crafting is awesome!): knitting, crochet, weaving, cross stitch, woodworking,scrapbooking, sewing, drawing, or anything else crafty or artsy!
+                Any kind of crafting is awesome!): knitting, crochet, weaving, cross stitch, woodworking,scrapbooking, sewing, drawing, or anything else crafty or artsy!
             </p>
           </div>
           <div class="card">
@@ -104,20 +111,21 @@
                 <li>Sunday May 28th</li>
                 <li>Sunday, June 11th</li>
                 <li>Sunday, June 25th</li>
-                <li>Sunday, July 9th</li>
+                <li>Sunday, July 9th - Live from the Toronoto Zoo!</li>
                 <li>Sunday, July 23rd</li>
+                <li>Sunday, August 6th</li>
+                <li>Sunday, August 20th</li>
               </ul>
             </p>
           </div>
           <div class="card">
             <h3 class="card__title">Discord Server</h3>
             <p>
-              Nam laudantium voluptas, tenetur repellendus numquam rem incidunt
-              deleniti veritatis?
+              <a href="https://discord.gg/5zKZrjct25">Click for an invite to the Crafting and Code Coffee Chats Discord server!</a>
             </p>
           </div>
         </div>
-        <p>
+        <!-- <p>
           Rerum, neque! Consequuntur obcaecati beatae dolorum, fuga itaque iusto
           dicta et corporis facere ea necessitatibus odit cum, voluptates harum,
           dolore maiores aliquid distinctio repellendus nesciunt!
@@ -126,7 +134,7 @@
           Unde dolor quod delectus obcaecati labore laboriosam optio sit
           eligendi. Excepturi explicabo quod obcaecati pariatur error, in,
           accusantium eum omnis repellat qui, aliquid magnam odit?
-        </p>
+        </p> -->
       </div>
     </main>
     <script src="/app.js"></script>
