--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
       <div class="wrapper">
         <h1>Yarn Help!</h1>
         <h2>3.0 Version - Is Being Built in Public</h2>
-        <p>This updated design and "DRYer" Javascript code is being built in public. Every day that I work on it, the updates will be deployed live. For the functional version please visit <a href="https://yarnhelp.app">https://yarnhelp.app</a> Note that I tend to use really bright colours like red and green for css testing purposes. Take a look at the code here: <a href="https://github.com/GingerKiwi/yarnhelp3">GitHub repo for Yarn Help 3.0</a></p>
+        <p>This updated design and "DRYer" Javascript code is being built in public. Every day that I work on it, the updates will be deployed live. Note that I tend to use really bright colours like red and green for css testing purposes. That currently includes the links for this site. Take a look at the code here: <a href="https://github.com/GingerKiwi/yarnhelp3">GitHub repo for Yarn Help 3.0</a></p>
+        <p>For the 2.0 version which has caluculations for worsted 04 weight (thickness) yarn for sweaters, scarfs, and blankets for both knit and crochet please visit <a href="https://yarnhelp2.netlify.app">https://yarnhelp2.netlify.app</a> </p>
         <p>
           Welcome to YarnHelp! This is a site for knitters and crocheters of all
           levels who want yarn math help, as well as their friends and family
@@ -57,6 +58,7 @@
                         versions of some of the pages</li>
           </ul>    
         </p>
+        <p><a href="https://yarnhelp2.netlify.app/" target="_blank">Yarn Help 2.0</a></p>
 
         <h2>Pages</h2>
         <div class="auto-grid">
@@ -65,9 +67,10 @@
               <a href="/howmuchyarn.html">How Much Yarn?</a>
             </h3>
             <p>
-              Voluptatem excepturi tempore quo recusandae sunt ullam earum optio
-              cum?
-              <a href="/doctorwho.html">a link</a>
+              Helps non-knitters quickly figure
+          out how much yarn to buy for their family members and friends who are
+          knitters - without spending hours learning about yarn. Currently version works for 4 different weights of yarn for knit and crocheted sweaters, and knit scarfs.
+              
             </p>
           </div>
           <div class="card">
@@ -80,8 +83,7 @@
           <div class="card">
             <h3 class="card__title">Doctor Who Scarf</h3>
             <p>
-              Nam laudantium voluptas, tenetur repellendus numquam rem incidunt
-              deleniti veritatis?
+              <a href="https://yarnhelp2.netlify.app/doctorwho.html" target="_blank">Link to Yarn Help 2.0 Doctor Who Scarf Page</a>
             </p>
           </div>
           <div class="card">
