add contact info to index.html

--- a/craftingandcode.html
+++ b/craftingandcode.html
@@ -71,7 +71,7 @@
                 What are Crafting and Code Coffee Chats? 
             </h3>
             <p>
-                They are monthly online meetups on Discord for web and software developers who also do any type of crafts.
+                They are biweekly online meetups on Discord for web and software developers who also do any type of crafts.
               
             </p>
           </div>
