got starwars and default groovy themes wkg on index.html and howmuchyarn.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Yarn Help!</title>
   </head>
   <header>
+    <!-- A11Y - ADD SKIP TO MAIN CONTENT! -->
     <form class="color-picker" action="">
       <fieldset>
         <legend class="visually-hidden">Pick a color scheme</legend>
