create simple dark theme - dyslexia friendly

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <label for="elegant" class="visually-hidden">Elegant Theme</label>
         <input type="radio" id="elegant" name="theme" />
 
+        <label for="simple-dark" class="visually-hidden">Simple Dark Dyslexia Friendly Theme</label>
+        <input type="radio" id="simple-dark" name="theme" />
+
       </fieldset>
     </form>
     <section class="hero">
