--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 
       </fieldset>
     </form>
+    <!-- nav here -->
     <section class="hero">
+      
       <div class="hero--inner">
         <div class="hero--inner-title">
           <h1>Yarn Help!</h1>
